# medicare-chat-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
data/costs/: amounts_2025.yaml
data/lookup/: HCPCS_2020.csv
notebooks/: 01_initial_inference_latency_test.ipynb  02_retrieval_experiments.ipynb  initial_inference_test.ipynb
