[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicare-assistant"
version = "0.1.0"
description = "A Medicare policy assistant with RAG."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "llama-cpp-python>=0.2.90",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "pypdf>=4.0.0",
  "tiktoken>=0.7.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.111.0", "uvicorn>=0.30.0"]
eval = ["ragas>=0.1.16"]
dev = ["black>=24.3.0", "ruff>=0.5.0", "pytest>=8.2.0", "ipykernel>=6.29.0"]

[project.scripts]
medicare-assistant = "medicare_assistant.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
